Début grid élément

--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "@mantine/core": "^7.7.1",
     "@mantine/dates": "^7.7.1",
     "@mantine/form": "^7.7.1",
-    "@mantine/hooks": "^7.7.1",
+    "@mantine/hooks": "^7.9.1",
     "@mantine/modals": "^7.7.1",
     "@mantine/notifications": "^7.7.1",
     "@mantine/nprogress": "^7.7.1",
     "dayjs": "^1.11.10",
     "formik": "^2.4.5",
+    "mantine-datatable": "^7.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-password-strength-bar": "^0.4.1",
     "react-router-dom": "^6.22.3"
   },
