--- a/package.json
+++ b/package.json
@@ -10,15 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/core": "^7.7.1",
-    "@mantine/dates": "^7.7.1",
-    "@mantine/form": "^7.7.1",
+    "@emotion/react": "^11.11.4",
+    "@mantine/carousel": "^7.9.1",
+    "@mantine/core": "^7.9.1",
+    "@mantine/dates": "^7.9.1",
+    "@mantine/dropzone": "^7.9.1",
+    "@mantine/form": "^7.9.1",
     "@mantine/hooks": "^7.9.1",
-    "@mantine/modals": "^7.7.1",
-    "@mantine/notifications": "^7.7.1",
-    "@mantine/nprogress": "^7.7.1",
+    "@mantine/modals": "^7.9.1",
+    "@mantine/notifications": "^7.9.1",
+    "@mantine/nprogress": "^7.9.1",
+    "@mantine/prism": "^6.0.21",
+    "@mantine/spotlight": "^7.9.1",
+    "@mantine/tiptap": "^7.9.1",
+    "@tabler/icons-react": "^3.4.0",
+    "@tiptap/extension-link": "^2.4.0",
+    "@tiptap/react": "^2.4.0",
+    "@tiptap/starter-kit": "^2.4.0",
+    "dayjs": "^1.11.11",
+    "embla-carousel-react": "^8.0.4",
     "axios": "^1.6.8",
-    "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
     "formik": "^2.4.5",
     "mantine-datatable": "^7.6.1",
@@ -26,7 +37,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-password-strength-bar": "^0.4.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/node": "^20.12.4",
