--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vite-project",
+  "name": "password-protector",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@mantine/carousel": "^7.9.1",
     "@mantine/core": "^7.9.1",
     "@mantine/dates": "^7.9.1",
     "@mantine/dropzone": "^7.9.1",
@@ -20,19 +19,10 @@
     "@mantine/modals": "^7.9.1",
     "@mantine/notifications": "^7.9.1",
     "@mantine/nprogress": "^7.9.1",
-    "@mantine/prism": "^6.0.21",
-    "@mantine/spotlight": "^7.9.1",
-    "@mantine/tiptap": "^7.9.1",
-    "@tabler/icons-react": "^3.4.0",
-    "@tiptap/extension-link": "^2.4.0",
-    "@tiptap/react": "^2.4.0",
-    "@tiptap/starter-kit": "^2.4.0",
-    "dayjs": "^1.11.11",
-    "embla-carousel-react": "^8.0.4",
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.8",
-    "dotenv": "^16.4.5",
     "formik": "^2.4.5",
-    "mantine-datatable": "^7.6.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
@@ -51,7 +41,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
-    "postcss-preset-mantine": "^1.13.0",
+    "postcss-preset-mantine": "^1.15.0",
     "postcss-simple-vars": "^7.0.1",
     "react-error-overlay": "^6.0.9",
     "typescript": "^5.2.2",
