--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@mantine/modals": "^7.9.1",
     "@mantine/notifications": "^7.9.1",
     "@mantine/nprogress": "^7.9.1",
+    "@tabler/icons-react": "^3.6.0",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.8",
     "formik": "^2.4.5",
+    "icons-react": "^3.7.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
