--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mantine/notifications": "^7.9.1",
     "@mantine/nprogress": "^7.9.1",
     "@tabler/icons-react": "^3.6.0",
+    "@reduxjs/toolkit": "^2.2.5",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.8",
     "formik": "^2.4.5",
@@ -29,8 +30,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-password-strength-bar": "^0.4.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "redux": "^5.0.1",
+    "use-debounce": "^10.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.12.4",
