--- a/package.json
+++ b/package.json
@@ -11,16 +11,28 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
-    "@mantine/core": "^7.9.1",
+    "@mantine/core": "^7.10.2",
     "@mantine/dates": "^7.9.1",
     "@mantine/dropzone": "^7.9.1",
     "@mantine/form": "^7.9.1",
-    "@mantine/hooks": "^7.9.1",
+    "@mantine/hooks": "^7.10.2",
     "@mantine/modals": "^7.9.1",
     "@mantine/notifications": "^7.9.1",
     "@mantine/nprogress": "^7.9.1",
-    "@tabler/icons-react": "^3.6.0",
+    "@mantine/tiptap": "^7.10.2",
     "@reduxjs/toolkit": "^2.2.5",
+    "@tabler/icons-react": "^3.6.0",
+    "@tiptap/extension-color": "^2.4.0",
+    "@tiptap/extension-highlight": "^2.4.0",
+    "@tiptap/extension-link": "^2.4.0",
+    "@tiptap/extension-subscript": "^2.4.0",
+    "@tiptap/extension-superscript": "^2.4.0",
+    "@tiptap/extension-text-align": "^2.4.0",
+    "@tiptap/extension-text-style": "^2.4.0",
+    "@tiptap/extension-underline": "^2.4.0",
+    "@tiptap/pm": "^2.4.0",
+    "@tiptap/react": "^2.4.0",
+    "@tiptap/starter-kit": "^2.4.0",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.6.8",
     "formik": "^2.4.5",
